--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,5 @@ branches:
     - master
     - develop
 install: "pip install -r requirements.txt"
-script: "python manage.py test"
+script: "python -m unittest discover"
+#script: "python manage.py test"
