--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,9 @@ tabulate==0.7.5
 python-dateutil==2.5.2
 requests==2.9.1
 quantgo-service-cli==2.1.1
+scikit-learn==0.17.1
+scipy==0.17.0
+matplotlib==1.5.1
+seaborn==0.7.0
+theano==0.8.1
+
